apps/scoreserver/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: __VAR__NAMESPACE
    name: api
    labels:
      app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      # restartPolicy: OnFailure
      containers:
      - image: __VAR__API_IMAGE
        imagePullPolicy: Always
        name: api
        ports:
          - containerPort: 3000
        args:
          - sh
          - -c
          - " if [ -f \"tmp/pids/server.pid\" ]; then rm tmp/pids/server.pid; fi\n
           bundle exec rails server -b 0.0.0.0;"
---
apiVersion: v1
kind: Service
metadata:
  namespace: __VAR__NAMESPACE
  name: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - port: 3000
