apps/scoreserver/push.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push
  labels:
    app: push
  namespace: __VAR__NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push
  template:
    metadata:
      labels:
        app: push
      namespace: scoreserver
    spec:
      containers:
      - image: openfresh/plasma:0.2.2
        imagePullPolicy: Always
        name: push
        ports:
        - name: push
          containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: __VAR__NAMESPACE
  name: push
spec:
  selector:
    app: push
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 8080
