apps/scoreserver/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis
  namespace: __VAR__NAMESPACE
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      namespace: __VAR__NAMESPACE
    spec:
      containers:
        - image: redis:5.0.4-alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: __VAR__NAMESPACE
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
status:
  loadBalancer: {}
